   * Update Spanish + Mexican + Argentinian translations - thx paconaranjo
   * Update Russian translation - thx Elheym
   * Update Brazilian translation - thx Igor
   * Update Basque translation - thx Xabier 
   * Update Korean translaton - thx domddol
   * Update Chinese Traditional translation - thx jackielam1997
   * Update Portuguese translation - thx moob
   * Improve language auto detect
   * Add semicolon as possible shortcut key - thx Allan
   * Add 60 fps to export settings for several formats
   * Google translate can now use google.cn (for Chinese ppl)
   * Export margins can now be percentage or pixels
   * Add more subtitle formats to command line + batch convert
   * If input file is unknown + plain text, "Import plain text" will open
   * ASS allows decimals for outline/shadow - thx Ninelpienel
   * Add "actor" to custom text export - thx mellsaid
   * Improve RTL support - thx OmrSi/darnn
   * Add "Persian" Tesseract OCR dictionary - thx NoRRt
   * Change some combo boxes to allow for better searching
   * Make "sort by" more consistant - thx Skrity
   * Add "Bridge gaps" (in durations) to "Batch convert"
   * Minor improvements for "Binary image compare" OCR - thx Boulder
   * Make "Status log" window non-modal - thx Skrity
* FIXED:
   * Fix memory leak regarding "mpv" + subtitle change - thx darnn
   * Fix missing space in format WebVTT
   * Fix support for combined Arabic characters in PAC - thx Zehelein
   * mpv frame stepping now updates position - thx Flitskikker
   * Fix issue with TTML and namespace - thx PannenkoekenNL
   * Fix possible crash in "Statistics" - thx Masih
   * Fix for Arabic spell check word split
   * Fix for reverse RTL start/end
   * Add to name to language list is now culture neutral
   * Maintain cursor position during unbreak/break
   * Fix for "disable auto open" of video files - thx Barneyk
   * Fix for rare large font issue - thx Camille
   * Fix for PAC language auto-detect - thx SirEllert