@@ -1,0 +1,8 @@
+﻿namespace Nikse.SubtitleEdit.Core.Enums
+{
+    public class ReplaceType
+    {
+        public bool WholeWord { get; set; }
+        public FindType FindType { get; set; }
+    }
+}
