@@ -36,18 +36,22 @@ namespace Nikse.SubtitleEdit.Forms
         public bool ReplaceAll { get; set; }
         public bool FindOnly { get; set; }
 
-        public FindType GetFindType()
+        public ReplaceType GetFindType()
         {
+            var result = new ReplaceType();
             if (radioButtonNormal.Checked)
-                return FindType.Normal;
-            if (radioButtonCaseSensitive.Checked)
-                return FindType.CaseSensitive;
-            return FindType.RegEx;
+                result.FindType = FindType.Normal;
+            else if (radioButtonCaseSensitive.Checked)
+                result.FindType = FindType.CaseSensitive;
+            else
+                result.FindType = FindType.RegEx;
+            result.WholeWord = checkBoxWholeWord.Checked;
+            return result;
         }
 
         public FindReplaceDialogHelper GetFindDialogHelper(int startLineIndex)
         {
-            return new FindReplaceDialogHelper(GetFindType(), false, textBoxFind.Text, _regEx, textBoxReplace.Text, startLineIndex);
+            return new FindReplaceDialogHelper(GetFindType(), textBoxFind.Text, _regEx, textBoxReplace.Text, startLineIndex);
         }
 
         private void FormReplaceDialog_KeyDown(object sender, KeyEventArgs e)
@@ -63,12 +67,15 @@ namespace Nikse.SubtitleEdit.Forms
             if (selectedText == findHelper.FindText)
                 textBoxReplace.Text = findHelper.ReplaceText;
             textBoxFind.SelectAll();
-            if (findHelper.FindType == FindType.RegEx)
+            if (findHelper.FindReplaceType.FindType == FindType.RegEx)
                 radioButtonRegEx.Checked = true;
-            else if (findHelper.FindType == FindType.CaseSensitive)
+            else if (findHelper.FindReplaceType.FindType == FindType.CaseSensitive)
                 radioButtonCaseSensitive.Checked = true;
             else
                 radioButtonNormal.Checked = true;
+
+            if (findHelper.FindReplaceType.FindType != FindType.RegEx)
+                checkBoxWholeWord.Checked = findHelper.FindReplaceType.WholeWord;
         }
 
         private void ButtonReplaceClick(object sender, EventArgs e)
